removed justify content to fix the alignment

--- a/style.css
+++ b/style.css
@@ -228,7 +228,7 @@ footer {
     margin: 0;
     padding: 0px;
     display: block;
-    justify-content: center;
+/*     justify-content: center; */
     height: auto;
     overflow-y: auto;
 }
